<resources>
    <string name="app_name">Agenda telefonica</string>
    <string name="listaDescricao">ListaContatos</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textonome">"Nome "</string>
    <string name="textoendereco">Endereco</string>
    <string name="textotelefone">Telefone</string>
    <string name="textoemail">E-mail</string>
    <string name="btncancelar">Cancelar</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnfotodescricao">Botao de foto</string>
    <string name="btnimportar">Importar</string>
</resources>