<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <EditText
        android:id="@+id/contatoEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/textoemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatoEndereco" />

    <EditText
        android:id="@+id/contatoTelefone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/textotelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatoNome" />

    <EditText
        android:id="@+id/contatoNome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textonome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatoFoto" />

    <EditText
        android:id="@+id/contatoEndereco"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textoendereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatoTelefone" />

    <ImageView
        android:id="@+id/contatoFoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/contatoNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:onClick="salvarContato"
        android:text="@string/btnSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:onClick="cancelar"
        android:text="@string/btncancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintStart_toEndOf="@+id/btnImportar" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/btnfotodescricao"
        android:onClick="tirarFoto"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toTopOf="@+id/contatoNome"
        app:layout_constraintStart_toEndOf="@+id/contatoFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:onClick="importarContato"
        android:text="@string/btnimportar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>